Fix issue where there was a gap between cell rows

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   width: 500px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
+  font-size: 0;
 }
 
 h1 {
